finish pug reto 1, 2

--- a/html/herencia.html
+++ b/html/herencia.html
@@ -2,11 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Lorem</title>
     <title>Default</title>
   </head>
   <body>
-    <h1>Lorem</h1>
-    <p>Lorem ipsum dolor sit amet.</p>
+    <h1>pruea h1</h1>
+    <p>enviando texto</p>
   </body>
 </html>
